Fixed navbars buttons overlap

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ main{
   width: 300px;
   background-color: black;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   top:0;
   right: -300px;
   overflow-x: hidden;
@@ -75,7 +75,7 @@ main{
   text-align: center;
   text-decoration: none;
   border-radius: 4px;
-  z-index: 5;
+  z-index: 2;
 }
 
 
@@ -120,6 +120,7 @@ footer{
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 #nav-bar #delete-page-button{
@@ -136,11 +137,8 @@ footer{
 }
 
 #sidebar-button {
-    z-index: 2;
-    top: 5px;
-    right: 5px;
-    position: fixed;
-    display: inline-block;
+    z-index: 20;
+    margin-right: 10px;
 }
 
 
@@ -307,13 +305,19 @@ footer{
 }
 
 #char-count {
-  position: absolute;
-  z-index: 1;
-  padding:10px;
-  top:5px;
-  left: 5px;
+  z-index: 2;
   font-family: Verdana;
   font-size: 20px;
+  margin-left: 10px;
+  padding: 10px;
+  min-width: 200px;
+}
+
+#button-padding{
+  width: 200px;
+  display: flex;
+  justify-content: end;
+  flex-shrink: 5;
 }
 
 #char-count-div {
@@ -325,7 +329,7 @@ footer{
   width: 300px;
   background-color: black;
   position: absolute;
-  z-index: 2;
+  z-index: 10;
   top:0;
   left: -300px;
   overflow-x: hidden;
@@ -357,15 +361,13 @@ footer{
 
 #stopwatch {
   display: flex;
-  position: absolute;
-  top:5px;
-  left: 0;
-  right: 0;
   font-size: 35px;
   flex-direction: row;
   align-items: center;
   max-width: 250px;
   margin: 0 auto;
+  gap: 20px;
+
 }
  
 #time {
@@ -375,3 +377,12 @@ footer{
   color: #fff;
 }
 
+#top-bar{
+  position: absolute;
+  height: 60px;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100vw;
+  align-items: center;
+}
